--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "serve": "webpack serve"
   },
   "dependencies": {
-    "@importantimport/material-color-utilities": "^0.2.1-alpha.0"
+    "@importantimport/material-color-utilities": "^0.2.1-alpha.0",
+    "@material/material-color-utilities": "^0.2.6"
   }
 }
